# gftools-builder3

./: .gitignore  Cargo.toml
resources/include-subsets/: NotoSansLimbu.glyphs  config.yaml
src/: context.rs  error.rs  graph.rs  ir.rs  lib.rs  main.rs  operations.rs  orchestrator.rs  recipe.rs  run.rs
src/buildsystem/: graph.rs  mod.rs  operation.rs  orchestrator.rs  output.rs  sourcesink.rs
src/operations/: addsubset.rs  autohint.rs  buildstat.rs  buildstatic.rs  buildvariable.rs  compress.rs  convert.rs  fix.rs  fontc.rs  glyphs2ufo.rs  subspace.rs
src/recipe_providers/: googlefonts.rs  mod.rs  noto.rs
src/recipe_providers/includesubsets/: mod.rs
tests/: integration_test.rs
