[package]
name = "turtle-build"
description = "Ninja-compatible build system for high-level programming languages"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/raviqqe/turtle"
version = "0.4.8"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "turtle"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
async-trait = "0.1.88"
dashmap = "6.1.0"
futures = "0.3"
monostate = "0.1.14"
num_cpus = "1"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
tokio = { "version" = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
