[package]
name = "gftools-builder"
description = "A tool to build and fix fonts for Google Fonts"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
repository = "https://github.com/simoncozens/gftools-builder3"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "gftools-builder"
path = "src/main.rs"

[dependencies]
async-recursion = "1"
async-trait = "0.1.88"
dashmap = "6.1.0"
fontc = { git = "https://github.com/googlefonts/fontc", version = "0.2.0" }
futures = "0.3"
monostate = "0.1.14"
num_cpus = "1"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
tempfile = "3"
thiserror = "2.0.12"
tokio = { "version" = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
