[package]
name = "gftools-builder"
description = "A tool to build and fix fonts for Google Fonts"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
repository = "https://github.com/simoncozens/gftools-builder3"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true

[[bin]]
name = "gftools-builder"
path = "src/main.rs"

[features]
graphviz = ["layout-rs"]

[dependencies]
async-recursion = "1"
async-trait = "0.1.88"
clap = "4.5.40"
dashmap = "6.1.0"
env_logger = "0.11.8"
fontations = "0.3.0"
fontc = { git = "https://github.com/googlefonts/fontc", version = "0.6.0" }
futures = "0.3"
google-fonts-axisregistry = "0.4.17"
log = "0.4.27"
monostate = "0.1.14"
num_cpus = "1"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
tempfile = "3"
thiserror = "2.0.12"
tokio = { "version" = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "ansi", "env-filter"] }
tracing-appender = "0.2"

layout-rs = { version = "0.1.3", optional = true }
serde-inline-default = "1.0.0"
fontdrasil = "0.4.0"
ttf2woff2 = { version = "0.10.3", default-features = false }
ascii-dag = "0.4.0"
tracing-chrome = "0.7.2"
clap-verbosity-flag = "3.0.4"
#babelfont = { git = "https://github.com/simoncozens/babelfont-rs", version = "0.2.0-pre" }
#fontmerge = { git = "https://github.com/simoncozens/fontmerge/", version = "0.1.0" }
babelfont = { path = "../babelfont-rs" }
fontmerge = { path = "../fontmerge" }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
